[gd_scene load_steps=6 format=3 uid="uid://d1ifev6k633jh"]

[ext_resource type="Script" path="res://scripts/missile_small.gd" id="1_acmpk"]
[ext_resource type="PackedScene" uid="uid://bq73bbrebolkq" path="res://scenes/explosion_very_small.tscn" id="2_rn6mg"]
[ext_resource type="Texture2D" uid="uid://beteqd3p1khxm" path="res://assets/effects/weapons/rocket_dsx.png" id="3_8hvtt"]
[ext_resource type="PackedScene" uid="uid://2cg5rghxqhu0" path="res://scenes/flame_left.tscn" id="4_0m0c4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wmjhu"]
radius = 11.0
height = 42.0

[node name="MissileSmall" type="Area2D" groups=["laser"]]
z_index = -2
scale = Vector2(0.7, 0.7)
script = ExtResource("1_acmpk")
explosion_small_scene = ExtResource("2_rn6mg")
flame_scene = ExtResource("4_0m0c4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_8hvtt")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_wmjhu")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
